Added a comment line

--- a/change-userpassword.yaml
+++ b/change-userpassword.yaml
@@ -1,3 +1,6 @@
+# usage:
+# ansible-playbook change-userpassword.yaml --extra-vars '{"host":"MYHOST", "password":"mypass", "user":"root"}'
+
 ---
 - hosts: '{{ host }}'
   become: yes
