--- a/change-userpassword.yaml
+++ b/change-userpassword.yaml
@@ -1,4 +1,5 @@
 # usage:
+# apt install whois
 # ansible-playbook change-userpassword.yaml --extra-vars '{"host":"MYHOST", "password":"mypass", "user":"root"}'
 
 ---
